plang/testing/logs/false-incorrect/57/program57.p.p
mhvw (qmL (uJQ (yY aqR (qeqZp cLFq)) L0s4 thOr) (U7Z) eklxV L).
rw56 :- (bQI, ud (n (RN6)) (DH) (Dojlg) LK, j MqQa uY (Z)); (q (oiWj2 (TI) (YVwM)) SLtq), lQk (CTLq) (j n z (AYkKB) FKJ).
pS3 :- i (rF No6K) q5btS (b4D).
hEFR3 XNidT (wa (btwb Yl dthJd (f85Ul (UtV) (l7 (L) (c5 c0) (J5Ib)) (N))) (xA4u (qkDSz (bx8 (a (wlUVL (KAjPR) (Rkk) w) Zp9A Hhcnv) (PF) (S5wiP) (AwF))) sH4Rl J83vm) rqtQ l).
f K08 (i5u (WT5) (bfq (Iu9) WmX5) (N)) (rt VMnLu o (fJ) (h5 q8u)) ag.

jYHeS (p7G (yd rl) (ER) JvDM (sm (xC (r3uj (cUyhj (ev4O (DB) JF (R)) LDj (FFTS) R7)) h8) j (V))).


mPT (tfZzn JE ylZP X) bP8 (X) V :- (qscM9 (MReB) Zswl (qHM cqT piVB)); lxzQ.


i7eU OOC (u8fKR HxI7 npbLu).

p0N rIY7 N ZKY :- pKh VO7hV vNrMj (vBcv (qLBUz vZsJ VVNM8 (bHWr) (j rcpkp (Yl3y) FZZ2 y0eJ)) (IV71) mbzXN (jB (S1vF9) (Izy9) (B26) kg3B)) (x N), m; (((u7c2F))).

rkIml (hsxC (o (q5w) qqRnU (G2NId)) (DM) (WwmV7)) :- ((wmUl; nzuK)), kqp, aK; mPs (LE), qkGKQ T Ek, (hcNJ ZQz1A, mbCEN (o9I (LJuOM) (gJv (uvP2 Dh))); (j (GrG) (G3))); zlVD; rN1 rgYE1 (Ju) n0Tsd; i t JGIq, s qUVRr EaYC, (pauAX Wo6 (hlg MOL (FvT)) (z4 Id9K (qRPcU ng V) Q74W (KH)) (Y0ytr); pE gbGX X c5).
r Bn2W2 jkQDo (q F) :- yPza (wz3UG (OQps)) (QoV6) (qK (R09P) (wbXm (ElQ8I)) (WKFal) (RcQ)).
v (UUG) th (zYGbo Ws4Nw Lf1g) :- qi Fl (y S0 ePNs).


x.
xIy (GgP) (isP) (ic8 (e16) (m9g r U5Zu hk W) (OLE)) E :- cglCB bhfbQ ynpBy (y2CzT Z (NTGvp)) (l (tXj0X FSz4Q xZ7 (d1 uXRF (jIk6) Ty)) (K)), vrkP (zta7 PI (M) (NO0)) (gmV3D mEs (P5rK) (j mHOfL Ybj5)) (lxXV (MbUc) i1 Cs7Wq); ru4W dj0uM g E; say (zq (xXdJ Fg) Q7UW G) WNsY; (lB (CkLH) Y WD); (d5AlS); (rLW (i1 (L) U9 tH (Y0)) (dDHZM (P2F) z (gNI (XCf) (Fx) gM sL8t)), nB (K) WiKk, pr aB), dw Ko0w (p (OUN) (Ulvl0) (YCbu6)) (buxA (eBuoj YP2g V8lK) V1LiT (FAFIi)); (s; yGM (od (UGxq)) (vPaA (L) J (yQ (Byn) S n (RPxv5))) (tNzwU fajOV L4 c o), m2MQ bmdB; we3mV a (aj Ek7 T)).
pfrO zp2 ox Bm8T8.
jB v :- (wG Q4m DN (p9M vDMf (F9QE5) Ok) Ttx).
? (ajvx2 (a4q1 (Ff) (d0ws) (k) Q3Tg) (WhEy) An; xc (mdk) pxCdw; (ya BZ)), vT1 TlXtz PI Oi (kz (ijEEg (yp0y (T7) (P) (JJxp))) (UDUQs) c), (jN (R) E2 h0FKz), gD, aPmU (F); cqVA iiI EsrP Hk1c, v, (mp1Ib (nqc b) (a (lI B7 (D) ku b) (a5 p6aI T Z (FL))) FevuL (h e (F) (Azw2))); j28K; sSr; a, kGSW (aSQ (Ho)) (E0Kg) (qjoqA) NL3xE; fe5S4 o BQq.